--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -906,7 +906,7 @@
         "    def summary(self):\n",
         "      df = pd.DataFrame.from_dict(self.results, orient=\"index\")\n",
         "      df = df.reset_index(inplace=True)\n",
-        "      df.columns = [\"Variable name\", \"coefficient\", \"standard_error\", \"t_stat\", \"p_value\"]\n",
+        "      df.columns = [\"Variable\", \"coefficient\", \"standard_error\", \"t_stat\", \"p_value\"]\n",
         "      return df\n"
       ]
     }
