--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -877,12 +877,12 @@
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        self.x[\"intercept\"] = 1\n",
+        "        self.x.insert(0, \"intercept\", 1)\n",
         "\n",
         "    def ols_regression(self):\n",
         "      X = self.x.values\n",
         "      Y = self.y.values\n",
-        "      beta = np.linalg.inv(X.T @ X) @ X.T @ Y\n",
+        "      beta = np.linalg.pinv(X.T @ X) @ X.T @ Y\n",
         "\n",
         "      y_pred = X @ beta\n",
         "      residuals = Y - y_pred\n",
@@ -893,7 +893,7 @@
         "      std_errors = np.sqrt(np.diag(cov_matrix))\n",
         "\n",
         "      t_stats = beta / std_errors\n",
-        "      p_values = [2 * (1 - stats.t.cdf(np.abs(t), df=n-k)) for t in t_stats]\n",
+        "      p_values = [2 * stats.t.sf(np.abs(t), df=n-k) for t in t_stats]\n",
         "\n",
         "      for i, col in enumerate(self.x.columns):\n",
         "         self.results[col] = {\n",
@@ -906,8 +906,8 @@
         "    def summary(self):\n",
         "      df = pd.DataFrame.from_dict(self.results, orient=\"index\")\n",
         "      df = df.reset_index(inplace=True)\n",
-        "      df.columns = [\"Variable\", \"coefficient\", \"standard_error\", \"t_stat\", \"p_value\"]\n",
-        "      return df\n"
+        "      df.columns = [\"Variable name\", \"coefficient value\", \"standard error\", \"t statistic\", \"p_value\"]\n",
+        "      return df"
       ]
     }
   ],
