--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -867,8 +867,8 @@
         "class RegressionModel:\n",
         "\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
+        "        self.x = x.copy\n",
+        "        self.y = y.copy\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
         "        self.results = {}\n",
@@ -881,14 +881,14 @@
         "\n",
         "    def ols_regression(self):\n",
         "      X = self.x.values\n",
-        "      Y = self.y.values\n",
-        "      beta = np.linalg.pinv(X.T @ X) @ X.T @ Y\n",
+        "      y = self.y.values\n",
+        "      beta = np.linalg.pinv(X.T @ X) @ X.T @ y\n",
         "\n",
         "      y_pred = X @ beta\n",
-        "      residuals = Y - y_pred\n",
+        "      residuals = y - y_pred\n",
         "\n",
         "      n, k = X.shape\n",
-        "      mse = (residuals.T @ residuals / (n - k))\n",
+        "      mse = (residuals.T @ residuals) / (n - k)\n",
         "      cov_matrix = mse * np.linalg.inv(X.T @ X)\n",
         "      std_errors = np.sqrt(np.diag(cov_matrix))\n",
         "\n",
