--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -882,7 +882,7 @@
         "    def ols_regression(self):\n",
         "      X = self.x.values\n",
         "      y = self.y.values\n",
-        "      beta = np.linalg.pinv(X.T @ X) @ X.T @ y\n",
+        "      beta = np.linalg.pinv(X) @ y\n",
         "\n",
         "      y_pred = X @ beta\n",
         "      residuals = y - y_pred\n",
@@ -906,7 +906,7 @@
         "    def summary(self):\n",
         "      df = pd.DataFrame.from_dict(self.results, orient=\"index\")\n",
         "      df = df.reset_index(inplace=True)\n",
-        "      df.columns = [\"Variable name\", \"coefficient value\", \"standard error\", \"t statistic\", \"p_value\"]\n",
+        "      df.columns = [\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
         "      return df"
       ]
     }
