--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -882,25 +882,25 @@
         "    def ols_regression(self):\n",
         "      X = self.x.values\n",
         "      y = self.y.values\n",
-        "      beta = np.linalg.pinv(X) @ y\n",
+        "      beta = np.linalg.pinv(X.T @ X) @ X.T @ y\n",
         "\n",
         "      y_pred = X @ beta\n",
         "      residuals = y - y_pred\n",
         "\n",
         "      n, k = X.shape\n",
         "      mse = (residuals.T @ residuals) / (n - k)\n",
-        "      cov_matrix = mse * np.linalg.inv(X.T @ X)\n",
+        "      cov_matrix = mse * np.linalg.pinv(X.T @ X)\n",
         "      std_errors = np.sqrt(np.diag(cov_matrix))\n",
         "\n",
         "      t_stats = beta / std_errors\n",
-        "      p_values = [2 * stats.t.sf(np.abs(t), df=n-k) for t in t_stats]\n",
+        "      p_values = [2 * (1 - stats.t.cdf(np.abs(t), df=n-k)) for t in t_stats]\n",
         "\n",
         "      for i, col in enumerate(self.x.columns):\n",
         "         self.results[col] = {\n",
-        "            \"coefficient\": beta[i, 0],\n",
-        "            \"standard_error\": std_errors[i],\n",
-        "            \"t_stat\": t_stats[i],\n",
-        "            \"p_value\": p_values[i]\n",
+        "            \"coefficient value\": beta[i, 0],\n",
+        "            \"standard error\": std_errors[i],\n",
+        "            \"t-statistic\": t_stats[i],\n",
+        "            \"p-value\": p_values[i]\n",
         "}\n",
         "\n",
         "    def summary(self):\n",
