--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -882,14 +882,14 @@
         "    def ols_regression(self):\n",
         "      X = self.x.values\n",
         "      y = self.y.values\n",
-        "      beta = np.linalg.pinv(X.T @ X) @ X.T @ y\n",
+        "      beta = np.linalg.pinv(X) @ y\n",
         "\n",
         "      y_pred = X @ beta\n",
         "      residuals = y - y_pred\n",
         "\n",
         "      n, k = X.shape\n",
-        "      mse = (residuals.T @ residuals) / (n - k)\n",
-        "      cov_matrix = mse * np.linalg.pinv(X.T @ X)\n",
+        "      residual_var = np.var(residuals, ddof=k)\n",
+        "      cov_matrix = residual_var * np.linalg.pinv(X.T @ X)\n",
         "      std_errors = np.sqrt(np.diag(cov_matrix))\n",
         "\n",
         "      t_stats = beta / std_errors\n",
