--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -892,7 +892,7 @@
         "      cov_matrix = residual_var * np.linalg.pinv(X.T @ X)\n",
         "      std_errors = np.sqrt(np.diag(cov_matrix))\n",
         "\n",
-        "      t_stats = beta / std_errors\n",
+        "      t_stats = beta.flatten() / std_errors\n",
         "      p_values = [2 * (1 - stats.t.cdf(np.abs(t), df=n-k)) for t in t_stats]\n",
         "\n",
         "      for i, col in enumerate(self.x.columns):\n",
