--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -866,17 +866,8 @@
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        \"\"\"\n",
-        "        Initialize the RegressionModel class.\n",
-        "\n",
-        "        Parameters:\n",
-        "        x (pd.DataFrame): Exogenous variables\n",
-        "        y (pd.DataFrame): Endogenous variable\n",
-        "        create_intercept (bool): Whether to add an intercept column\n",
-        "        regression_type (str): Type of regression (\"ols\" or \"logit\")\n",
-        "        \"\"\"\n",
         "        self.x = x.copy()\n",
-        "        self.y = y.copy()\n",
+        "        self.y = y.copy().values.reshape(-1, 1)  # 确保y是二维的列向量\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
         "        self.results = {}\n",
@@ -885,70 +876,52 @@
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Add a column of ones to the x DataFrame for the intercept.\"\"\"\n",
-        "        if 'intercept' not in self.x.columns:\n",
-        "            self.x['intercept'] = 1\n",
+        "        self.x.insert(0, 'intercept', 1)  # 确保插入在第一列\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Perform OLS regression and store results.\"\"\"\n",
-        "        # Convert to numpy arrays\n",
         "        X = self.x.values\n",
-        "        y = self.y.values\n",
+        "        y = self.y\n",
         "\n",
-        "        # Calculate coefficients (β = (X'X)^-1 X'y)\n",
-        "        XtX = np.dot(X.T, X)\n",
-        "        XtX_inv = np.linalg.inv(XtX)\n",
-        "        Xty = np.dot(X.T, y)\n",
-        "        coefficients = np.dot(XtX_inv, Xty)\n",
+        "        XtX_inv = np.linalg.inv(np.dot(X.T, X))\n",
+        "        coefficients = np.dot(XtX_inv, np.dot(X.T, y))\n",
         "\n",
-        "        # Calculate residuals and standard errors\n",
         "        predicted = np.dot(X, coefficients)\n",
         "        residuals = y - predicted\n",
-        "        residual_variance = np.sum(residuals**2) / (X.shape[0] - X.shape[1])\n",
-        "        coefficients_cov = residual_variance * XtX_inv\n",
-        "        standard_errors = np.sqrt(np.diag(coefficients_cov))\n",
         "\n",
-        "        # Calculate t-statistics and p-values\n",
+        "        df_residual = X.shape[0] - X.shape[1]\n",
+        "        residual_variance = (residuals.T @ residuals) / df_residual\n",
+        "        covariance_matrix = residual_variance * XtX_inv\n",
+        "\n",
+        "        standard_errors = np.sqrt(np.diag(covariance_matrix)).reshape(-1, 1)\n",
         "        t_stats = coefficients / standard_errors\n",
-        "        p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=X.shape[0] - X.shape[1]))\n",
+        "        p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
         "\n",
-        "        # Store results in dictionary\n",
         "        self.results = {}\n",
-        "        for i, col in enumerate(self.x.columns):\n",
+        "        for idx, col in enumerate(self.x.columns):\n",
         "            self.results[col] = {\n",
-        "                'coefficient': coefficients[i],\n",
-        "                'standard_error': standard_errors[i],\n",
-        "                't_stat': t_stats[i],\n",
-        "                'p_value': p_values[i]\n",
+        "                'coefficient': coefficients[idx, 0],\n",
+        "                'standard_error': standard_errors[idx, 0],\n",
+        "                't_stat': t_stats[idx, 0],\n",
+        "                'p_value': p_values[idx, 0]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Print regression results in a table format.\"\"\"\n",
         "        if not self.results:\n",
         "            self.ols_regression()\n",
         "\n",
-        "        # Prepare table data\n",
-        "        table_data = []\n",
-        "        for var, values in self.results.items():\n",
-        "            row = [\n",
-        "                var,\n",
-        "                values['coefficient'],\n",
-        "                values['standard_error'],\n",
-        "                values['t_stat'],\n",
-        "                values['p_value']\n",
-        "            ]\n",
-        "            table_data.append(row)\n",
+        "        summary_df = pd.DataFrame([\n",
+        "            {\n",
+        "              \"Variable name\": var,\n",
+        "              \"coefficient value\": vals[\"coefficient\"],\n",
+        "              \"standard error\": vals[\"standard_error\"],\n",
+        "              \"t-statistic\": vals[\"t_stat\"],\n",
+        "              \"p-value\": vals[\"p_value\"]\n",
+        "            }\n",
+        "            for var, vals in self.results.items()\n",
+        "        ])\n",
         "\n",
-        "        # Create and format the DataFrame\n",
-        "        summary_df = pd.DataFrame(\n",
-        "            table_data,\n",
-        "            columns=[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
-        "        )\n",
-        "\n",
-        "        # Format float display\n",
         "        pd.options.display.float_format = '{:.4f}'.format\n",
-        "\n",
-        "        return summary_df"
+        "        return summary_df\n"
       ]
     }
   ],
