--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -921,7 +921,7 @@
         "        ])\n",
         "\n",
         "        pd.options.display.float_format = '{:.4f}'.format\n",
-        "        return summary_df\n"
+        "        return summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]"
       ]
     }
   ],
