--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -878,32 +878,46 @@
         "    def add_intercept(self):\n",
         "        self.x.insert(0, 'intercept', 1)  # 确保插入在第一列\n",
         "\n",
+        "\n",
         "    def ols_regression(self):\n",
-        "        X = self.x.values\n",
-        "        y = self.y\n",
+        "      X = self.x.values\n",
+        "      y = self.y.reshape(-1, 1)\n",
         "\n",
-        "        XtX_inv = np.linalg.inv(np.dot(X.T, X))\n",
-        "        coefficients = np.dot(XtX_inv, np.dot(X.T, y))\n",
+        "      XtX = np.dot(X.T, X)\n",
+        "      if np.linalg.matrix_rank(XtX) < XtX.shape[0]:\n",
+        "        raise np.linalg.LinAlgError(\"X矩阵不可逆，存在多重共线性问题!\")\n",
         "\n",
-        "        predicted = np.dot(X, coefficients)\n",
-        "        residuals = y - predicted\n",
+        "      XtX_inv = np.linalg.inv(XtX)\n",
+        "      coefficients = np.dot(XtX_inv, np.dot(X.T, y))\n",
+        "      predicted = np.dot(X, coefficients)\n",
+        "      residuals = y - predicted\n",
         "\n",
-        "        df_residual = X.shape[0] - X.shape[1]\n",
-        "        residual_variance = (residuals.T @ residuals) / df_residual\n",
-        "        covariance_matrix = residual_variance * XtX_inv\n",
+        "      df_residual = X.shape[0] - X.shape[1]\n",
+        "      if df_residual <= 0:\n",
+        "        raise ValueError(\"自由度不足，样本数量需要大于变量数量(包括截距)!\")\n",
         "\n",
-        "        standard_errors = np.sqrt(np.diag(covariance_matrix)).reshape(-1, 1)\n",
-        "        t_stats = coefficients / standard_errors\n",
-        "        p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
+        "      residual_variance = (residuals.T @ residuals) / df_residual\n",
+        "      if residual_variance <= 0:\n",
+        "        raise ValueError(\"残差方差非正，检查数据是否合理或存在共线性!\")\n",
         "\n",
-        "        self.results = {}\n",
-        "        for idx, col in enumerate(self.x.columns):\n",
-        "            self.results[col] = {\n",
-        "                'coefficient': coefficients[idx, 0],\n",
-        "                'standard_error': standard_errors[idx, 0],\n",
-        "                't_stat': t_stats[idx, 0],\n",
-        "                'p_value': p_values[idx, 0]\n",
-        "            }\n",
+        "      covariance_matrix = residual_variance * XtX_inv\n",
+        "      variances = np.diag(covariance_matrix)\n",
+        "      if np.any(variances <= 0):\n",
+        "        raise ValueError(\"协方差矩阵异常，无法计算标准误!\")\n",
+        "\n",
+        "      standard_errors = np.sqrt(variances).reshape(-1, 1)\n",
+        "      t_stats = coefficients / standard_errors\n",
+        "      p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
+        "\n",
+        "      self.results = {}\n",
+        "      for idx, col in enumerate(self.x.columns):\n",
+        "        self.results[col] = {\n",
+        "          'coefficient': coefficients[idx, 0],\n",
+        "          'standard_error': standard_errors[idx, 0],\n",
+        "          't_stat': t_stats[idx, 0],\n",
+        "          'p_value': p_values[idx, 0]\n",
+        "        }\n",
+        "\n",
         "\n",
         "    def summary(self):\n",
         "        if not self.results:\n",
@@ -921,7 +935,12 @@
         "        ])\n",
         "\n",
         "        pd.options.display.float_format = '{:.4f}'.format\n",
-        "        return summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]"
+        "        return summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ],
