--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -865,77 +865,79 @@
         "import scipy.stats as stats\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        self.x = x.copy()\n",
-        "        self.y = y.copy().values.reshape(-1, 1)  # 确保y是二维的列向量\n",
-        "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type\n",
-        "        self.results = {}\n",
+        "  def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "    self.x = x.copy()\n",
+        "    self.y = y.copy()\n",
+        "    self.create_intercept = create_intercept\n",
+        "    self.regression_type = regression_type\n",
+        "    self.results = {}\n",
         "\n",
-        "        if self.create_intercept:\n",
+        "    if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
-        "    def add_intercept(self):\n",
-        "        self.x.insert(0, 'intercept', 1)  # 确保插入在第一列\n",
+        "  def add_intercept(self):\n",
+        "    if 'intercept' not in self.x.columns:\n",
+        "      self.x.insert(0, 'intercept', 1)\n",
         "\n",
+        "  def ols_regression(self):\n",
+        "    X = self.x.values\n",
+        "    y = self.y.values.reshape(-1, 1)\n",
         "\n",
-        "    def ols_regression(self):\n",
-        "      X = self.x.values\n",
-        "      y = self.y.reshape(-1, 1)\n",
-        "\n",
-        "      XtX = np.dot(X.T, X)\n",
-        "      if np.linalg.matrix_rank(XtX) < XtX.shape[0]:\n",
-        "        raise np.linalg.LinAlgError(\"X矩阵不可逆，存在多重共线性问题!\")\n",
-        "\n",
+        "        # 检查矩阵是否可逆\n",
+        "    XtX = np.dot(X.T, X)\n",
+        "    if np.linalg.matrix_rank(XtX) < XtX.shape[0]:\n",
+        "      XtX_inv = np.linalg.pinv(XtX)  # 改用伪逆以避免报错\n",
+        "    else:\n",
         "      XtX_inv = np.linalg.inv(XtX)\n",
-        "      coefficients = np.dot(XtX_inv, np.dot(X.T, y))\n",
-        "      predicted = np.dot(X, coefficients)\n",
-        "      residuals = y - predicted\n",
         "\n",
-        "      df_residual = X.shape[0] - X.shape[1]\n",
-        "      if df_residual <= 0:\n",
-        "        raise ValueError(\"自由度不足，样本数量需要大于变量数量(包括截距)!\")\n",
+        "    coefficients = np.dot(XtX_inv, np.dot(X.T, y))\n",
+        "    predicted = np.dot(X, coefficients)\n",
+        "    residuals = y - predicted\n",
         "\n",
-        "      residual_variance = (residuals.T @ residuals) / df_residual\n",
-        "      if residual_variance <= 0:\n",
-        "        raise ValueError(\"残差方差非正，检查数据是否合理或存在共线性!\")\n",
+        "    df_residual = X.shape[0] - X.shape[1]\n",
+        "    if df_residual <= 0:\n",
+        "      raise ValueError(\"自由度不足，样本数量需要大于变量数量（包括截距）!\")\n",
         "\n",
-        "      covariance_matrix = residual_variance * XtX_inv\n",
-        "      variances = np.diag(covariance_matrix)\n",
-        "      if np.any(variances <= 0):\n",
-        "        raise ValueError(\"协方差矩阵异常，无法计算标准误!\")\n",
+        "    residual_variance = (residuals.T @ residuals) / df_residual\n",
+        "    if residual_variance <= 0:\n",
+        "      residual_variance = np.array([[np.nan]])\n",
         "\n",
-        "      standard_errors = np.sqrt(variances).reshape(-1, 1)\n",
-        "      t_stats = coefficients / standard_errors\n",
+        "    covariance_matrix = residual_variance * XtX_inv\n",
+        "    variances = np.diag(covariance_matrix)\n",
+        "\n",
+        "        # 防止负数方差\n",
+        "    standard_errors = np.sqrt(np.abs(variances)).reshape(-1, 1)\n",
+        "\n",
+        "    with np.errstate(divide='ignore', invalid='ignore'):\n",
+        "      t_stats = np.where(standard_errors != 0, coefficients / standard_errors, 0)\n",
         "      p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
         "\n",
-        "      self.results = {}\n",
-        "      for idx, col in enumerate(self.x.columns):\n",
-        "        self.results[col] = {\n",
-        "          'coefficient': coefficients[idx, 0],\n",
-        "          'standard_error': standard_errors[idx, 0],\n",
-        "          't_stat': t_stats[idx, 0],\n",
-        "          'p_value': p_values[idx, 0]\n",
-        "        }\n",
+        "    self.results = {}\n",
+        "    for idx, col in enumerate(self.x.columns):\n",
+        "      self.results[col] = {\n",
+        "        'coefficient': float(coefficients[idx]),\n",
+        "        'standard_error': float(standard_errors[idx]),\n",
+        "        't_stat': float(t_stats[idx]),\n",
+        "        'p_value': float(p_values[idx]) if not np.isnan(t_stats[idx]) else np.nan\n",
+        "      }\n",
         "\n",
+        "  def summary(self):\n",
+        "    if not self.results:\n",
+        "      self.ols_regression()\n",
         "\n",
-        "    def summary(self):\n",
-        "        if not self.results:\n",
-        "            self.ols_regression()\n",
+        "    summary_df = pd.DataFrame([\n",
+        "      {\n",
+        "        \"Variable name\": var,\n",
+        "        \"coefficient value\": round(vals[\"coefficient\"], 4),\n",
+        "        \"standard error\": round(vals[\"standard_error\"], 4),\n",
+        "        \"t-statistic\": round(vals[\"t_stat\"], 4),\n",
+        "        \"p-value\": round(vals[\"p_value\"], 4) if not np.isnan(vals[\"p_value\"]) else np.nan\n",
+        "      }\n",
+        "      for var, vals in self.results.items()\n",
+        "    ])\n",
         "\n",
-        "        summary_df = pd.DataFrame([\n",
-        "            {\n",
-        "              \"Variable name\": var,\n",
-        "              \"coefficient value\": vals[\"coefficient\"],\n",
-        "              \"standard error\": vals[\"standard_error\"],\n",
-        "              \"t-statistic\": vals[\"t_stat\"],\n",
-        "              \"p-value\": vals[\"p_value\"]\n",
-        "            }\n",
-        "            for var, vals in self.results.items()\n",
-        "        ])\n",
+        "    return summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
         "\n",
-        "        pd.options.display.float_format = '{:.4f}'.format\n",
-        "        return summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
         "\n",
         "\n",
         "\n",
