--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -923,20 +923,24 @@
         "\n",
         "  def summary(self):\n",
         "    if not self.results:\n",
-        "      self.ols_regression()\n",
+        "        self.ols_regression()\n",
         "\n",
-        "    summary_df = pd.DataFrame([\n",
-        "      {\n",
-        "        \"Variable name\": var,\n",
-        "        \"coefficient value\": round(vals[\"coefficient\"], 4),\n",
-        "        \"standard error\": round(vals[\"standard_error\"], 4),\n",
-        "        \"t-statistic\": round(vals[\"t_stat\"], 4),\n",
-        "        \"p-value\": round(vals[\"p_value\"], 4) if not np.isnan(vals[\"p_value\"]) else np.nan\n",
-        "      }\n",
-        "      for var, vals in self.results.items()\n",
-        "    ])\n",
+        "    summary_df = pd.DataFrame({\n",
+        "        \"Variable name\": list(self.results.keys()),\n",
+        "        \"coefficient value\": [round(self.results[var][\"coefficient\"], 4) for var in self.results],\n",
+        "        \"standard error\": [round(self.results[var][\"standard_error\"], 4) for var in self.results],\n",
+        "        \"t-statistic\": [round(self.results[var][\"t_stat\"], 4) for var in self.results],\n",
+        "        \"p-value\": [round(self.results[var][\"p_value\"], 4) if not np.isnan(self.results[var][\"p_value\"]) else None for var in self.results]\n",
+        "    })\n",
         "\n",
-        "    return summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
+        "    # 确保列的顺序和拼写完全匹配\n",
+        "    summary_df = summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
+        "\n",
+        "    # 强制设置显示格式（小数4位）\n",
+        "    pd.options.display.float_format = '{:.4f}'.format\n",
+        "\n",
+        "    return summary_df\n",
+        "\n",
         "\n",
         "\n",
         "\n",
