--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -923,7 +923,7 @@
         "\n",
         "  def summary(self):\n",
         "    if not self.results:\n",
-        "        self.ols_regression()\n",
+        "      self.ols_regression()\n",
         "\n",
         "    summary_df = pd.DataFrame({\n",
         "        \"Variable name\": list(self.results.keys()),\n",
@@ -933,13 +933,13 @@
         "        \"p-value\": [round(self.results[var][\"p_value\"], 4) if not np.isnan(self.results[var][\"p_value\"]) else None for var in self.results]\n",
         "    })\n",
         "\n",
-        "    # 确保列的顺序和拼写完全匹配\n",
+        "    # 确保列顺序\n",
         "    summary_df = summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
         "\n",
-        "    # 强制设置显示格式（小数4位）\n",
         "    pd.options.display.float_format = '{:.4f}'.format\n",
         "\n",
-        "    return summary_df\n",
+        "    # **关键修改在这里：不返回，直接打印结果**\n",
+        "    print(summary_df.to_string(index=False))\n",
         "\n",
         "\n",
         "\n",
