--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 21,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -865,72 +865,61 @@
         "import scipy.stats as stats\n",
         "\n",
         "class RegressionModel:\n",
-        "  def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "    self.x = x.copy()\n",
-        "    self.y = y.copy().values.reshape(-1, 1)\n",
-        "    self.create_intercept = create_intercept\n",
-        "    self.regression_type = regression_type\n",
-        "    self.results = {}\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "        self.x = x.copy()\n",
+        "        self.y = y.copy().values.reshape(-1, 1)\n",
+        "        self.create_intercept = create_intercept\n",
+        "        self.regression_type = regression_type\n",
+        "        self.results = {}\n",
         "\n",
-        "    if self.create_intercept:\n",
-        "      self.add_intercept()\n",
+        "        if self.create_intercept:\n",
+        "            self.add_intercept()\n",
         "\n",
-        "  def add_intercept(self):\n",
-        "    if 'intercept' not in self.x.columns:\n",
-        "      self.x.insert(0, 'intercept', 1)\n",
+        "    def add_intercept(self):\n",
+        "        if 'intercept' not in self.x.columns:\n",
+        "            self.x.insert(0, 'intercept', 1)\n",
         "\n",
-        "  def ols_regression(self):\n",
-        "    X = self.x.values\n",
-        "    y = self.y\n",
+        "    def ols_regression(self):\n",
+        "        X = self.x.values\n",
+        "        y = self.y\n",
         "\n",
-        "    XtX = np.dot(X.T, X)\n",
-        "    if np.linalg.matrix_rank(XtX) < XtX.shape[0]:\n",
-        "      raise np.linalg.LinAlgError(\"矩阵不可逆，存在多重共线性问题!\")\n",
+        "        XtX = X.T @ X\n",
+        "        XtX_inv = np.linalg.inv(XtX)\n",
+        "        coefficients = XtX_inv @ X.T @ y\n",
         "\n",
-        "    XtX_inv = np.linalg.inv(XtX)\n",
-        "    coefficients = XtX_inv @ X.T @ y\n",
+        "        predictions = X @ coefficients\n",
+        "        residuals = y - predictions\n",
         "\n",
-        "    predicted = X @ coefficients\n",
-        "    residuals = y - predicted\n",
+        "        df_residual = X.shape[0] - X.shape[1]\n",
+        "        residual_variance = (residuals.T @ residuals) / df_residual\n",
         "\n",
-        "    df_residual = X.shape[0] - X.shape[1]\n",
-        "    if df_residual <= 0:\n",
-        "      raise ValueError(\"自由度不足，无法进行回归！\")\n",
+        "        covariance_matrix = residual_variance * XtX_inv\n",
+        "        standard_errors = np.sqrt(np.diag(covariance_matrix)).reshape(-1, 1)\n",
+        "        t_stats = coefficients / standard_errors\n",
+        "        p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
         "\n",
-        "    # 修正了这里的错误 (必须加上 [0,0] 提取标量)\n",
-        "    residual_variance = (residuals.T @ residuals)[0, 0] / df_residual\n",
-        "    covariance_matrix = residual_variance * XtX_inv\n",
+        "        for idx, var in enumerate(self.x.columns):\n",
+        "            self.results[var] = {\n",
+        "                'coefficient': float(coefficients[idx]),\n",
+        "                'standard_error': float(standard_errors[idx]),\n",
+        "                't_stat': float(t_stats[idx]),\n",
+        "                'p_value': float(p_values[idx])\n",
+        "            }\n",
         "\n",
-        "    standard_errors = np.sqrt(np.diag(covariance_matrix)).reshape(-1, 1)\n",
-        "    t_stats = coefficients / standard_errors\n",
-        "    p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
+        "    def summary(self):\n",
+        "        if not self.results:\n",
+        "            self.ols_regression()\n",
         "\n",
-        "    self.results = {}\n",
-        "    for idx, col in enumerate(self.x.columns):\n",
-        "      self.results[col] = {\n",
-        "        'coefficient': float(coefficients[idx]),\n",
-        "        'standard_error': float(standard_errors[idx]),\n",
-        "        't_stat': float(t_stats[idx]),\n",
-        "        'p_value': float(p_values[idx])\n",
-        "      }\n",
+        "        summary_df = pd.DataFrame({\n",
+        "            \"Variable name\": list(self.results.keys()),\n",
+        "            \"coefficient value\": [round(self.results[var][\"coefficient\"], 4) for var in self.results],\n",
+        "            \"standard error\": [round(self.results[var][\"standard_error\"], 4) for var in self.results],\n",
+        "            \"t-statistic\": [round(self.results[var][\"t_stat\"], 4) for var in self.results],\n",
+        "            \"p-value\": [round(self.results[var][\"p_value\"], 4) for var in self.results]\n",
+        "        })\n",
         "\n",
-        "  def summary(self):\n",
-        "    if not self.results:\n",
-        "      self.ols_regression()\n",
-        "\n",
-        "    summary_df = pd.DataFrame({\n",
-        "      \"Variable name\": list(self.results.keys()),\n",
-        "      \"coefficient value\": [round(self.results[var][\"coefficient\"], 4) for var in self.results],\n",
-        "      \"standard error\": [round(self.results[var][\"standard_error\"], 4) for var in self.results],\n",
-        "      \"t-statistic\": [round(self.results[var][\"t_stat\"], 4) for var in self.results],\n",
-        "      \"p-value\": [round(self.results[var][\"p_value\"], 4) for var in self.results]\n",
-        "    })\n",
-        "\n",
-        "    summary_df = summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
-        "\n",
-        "        # 如果自动评分是检查打印结果，强烈建议你换成下面的方式：\n",
-        "    print(summary_df.to_string(index=False))\n",
-        "\n",
+        "        summary_df = summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
+        "        print(summary_df.to_string(index=False))\n",
         "\n",
         "\n",
         "\n",
